tests/build/cases/impl_ui_node/delegate_list_expr_error_incorrect_type_children.stderr
error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
   --> cases/impl_ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:16
    |
9   | #[impl_ui_node(children)]
    | ---------------^^^^^^^^--
    | |              |
    | |              the trait `UiNodeList` is not implemented for `NotANodeList`
    | required by a bound introduced by this call
    |
note: required by a bound in `delegate_list`
   --> $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_list(d: &impl UiNodeList) -> &impl UiNodeList {
    |                                   ^^^^^^^^^^ required by this bound in `delegate_list`

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
   --> cases/impl_ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:16
    |
9   | #[impl_ui_node(children)]
    | ---------------^^^^^^^^--
    | |              |
    | |              the trait `UiNodeList` is not implemented for `NotANodeList`
    | required by a bound introduced by this call
    |
note: required by a bound in `delegate_list_mut`
   --> $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_list_mut(d: &mut impl UiNodeList) -> &mut impl UiNodeList {
    |                                           ^^^^^^^^^^ required by this bound in `delegate_list_mut`
